Fixing overflowing width and height problems for mobile

--- a/ClientApp/src/app/home/home.component.scss
+++ b/ClientApp/src/app/home/home.component.scss
@@ -25,27 +25,27 @@ span {
   text-shadow: 0px 4px 4px #00000030;
 
   > div {
-    padding: 0px 32px;
+    /*padding: 0px 32px;*/
     /*gap: 14px;*/
 
     > h1 {
-      font-size: 96px;
+      font-size: 6rem;
       line-height: normal;
       margin-bottom: 0;
     }
 
     > h3 {
-      font-size: 32px;
+      font-size: 2rem;
       letter-spacing: 2px;
       line-height: normal;
-      margin-bottom: 0;
+      margin-bottom: 0; 
       position: relative;
       top: -16px;
     }
   }
 
   > p {
-    font-size: 16px;
+    font-size: 1rem;
     color: #196E7B;
     margin-bottom: 0;
   }
